map with full functionality

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,11 @@
   "description": "Backend server for the EasyOrganic Admin Dashboard",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "npm install && node server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "socket.io": "^4.7.5"
   }
 }
